[gd_scene load_steps=11 format=2]

[ext_resource path="res://World_scenes/Enemies/Enemy_boss.gd" type="Script" id=1]
[ext_resource path="res://World_scenes/Guns/AK47_enemey.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.387562

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0745098, 0.737255, 0, 1 )

[sub_resource type="CapsuleMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0.905882, 1, 1 )

[sub_resource type="CapsuleMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.0745098, 0.737255, 0, 1 )

[sub_resource type="CylinderShape" id=8]
radius = 37.0
height = 1.2

[node name="Enemy_boss" type="KinematicBody" groups=["Enemies"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -1, -8.74228e-08, 3.82137e-15, 0, -3.0598e-08, -0.7, 8.74228e-08, -1, 4.37114e-08, 3.36059e-08, 0.6, 0.0688145 )
shape = SubResource( 1 )

[node name="AK47_enemey" parent="." instance=ExtResource( 2 )]
transform = Transform( -6.55671e-09, 0, -0.15, 0, 0.15, 0, 0.15, 0, -6.55671e-09, 0.3, 0.5, -0.6 )

[node name="AK47_enemey2" parent="." instance=ExtResource( 2 )]
transform = Transform( -6.55671e-09, 0, -0.15, 0, 0.15, 0, 0.15, 0, -6.55671e-09, -0.3, 0.5, -0.6 )

[node name="body" type="MeshInstance" parent="."]
transform = Transform( -0.378, -3.23115e-08, 9.88665e-16, 0, -2.62268e-08, -0.42, 3.30458e-08, -0.3696, 1.1309e-08, 3.36059e-08, 0.6, 0.0688145 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="visor" type="MeshInstance" parent="."]
transform = Transform( 2.8325e-08, 0, -0.2, 0, 0.2, 0, 0.224, 0, 2.72759e-08, 1.61214e-08, 0.8, -0.131186 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="backpack" type="MeshInstance" parent="."]
transform = Transform( -0.3, 1.71349e-08, 7.48989e-16, 0, -1.31134e-08, 0.3, 2.62268e-08, 0.196, 8.56743e-09, 5.98328e-08, 0.5, 0.368815 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
shape = SubResource( 8 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.440548, 0 )
cast_to = Vector3( 0, 0, -41 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Gun" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.657955, -0.5 )

[connection signal="boss_death" from="." to="." method="_on_Enemy_boss_boss_death"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
